--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,8 @@ body {
 .header-accent {
   color: var(--accent-color);
 }
-.footer-accent{
-    color: var(--accent-color);
+.footer-accent {
+  color: var(--accent-color);
 }
 
 h1,
@@ -36,9 +36,21 @@ h3,
 h4,
 h5,
 h6,
-p,
+p {
+  margin: 0;
+}
+
 ul {
   margin: 0;
+  padding: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
 }
 
 /*------------------------CONTAINER-----------------------*/
@@ -49,12 +61,24 @@ ul {
   padding: 0 15px;
 }
 
+.section {
+  padding: 94px 0;
+}
+
 /*------------------------HEADER-----------------------*/
 
-.header {
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
   margin: 0 auto;
   width: 1200px;
   padding: 0 15px;
+}
+
+.header {
+  border-bottom: 1px solid #ececec;
 }
 
 .header-logo {
@@ -70,19 +94,31 @@ ul {
   color: var(--primary-text-color);
 }
 
-.nav-list {
+.nav-menu{
   display: flex;
 }
 
+
+
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-list:last-child{
+  margin-right: 331px;
+}
+
 .nav-list a {
-  display: block;
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   padding: 10px 0 10px 0;
+  margin-left: auto;
 }
+
 
 .nav-list-item:not(:last-child) {
   margin-right: 50px;
@@ -104,6 +140,8 @@ a.current {
 
 .header-contacts {
   display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
 .header-contacts a {
@@ -122,12 +160,19 @@ a.current {
 }
 
 /*------------------------BANER-----------------------*/
+.banner-bg {
+  background-color: #2f303a;
+  height: 600px;
+}
+
 .banner {
-  background-color: var(--primary-text-color);
-  height: 550px;
   margin: 0 auto;
-  width: 1200px;
   padding: 0 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 200px 452px;
 }
 
 .banner-title {
@@ -136,6 +181,8 @@ a.current {
   line-height: 1.36;
 
   text-align: center;
+  max-width: 696px;
+
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
@@ -150,8 +197,6 @@ a.current {
 
   border: none;
   display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   border-radius: 4px;
   padding: 11px 32px 11px 32px;
@@ -163,10 +208,11 @@ a.current {
 
 /*------------------------FEATURES-----------------------*/
 
-.features{
-    margin: 0 auto;
+.features {
+  margin: 0 auto;
   width: 1200px;
-  padding: 0 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .features-title {
@@ -177,6 +223,7 @@ a.current {
   text-transform: uppercase;
 
   color: var(--primary-text-color);
+  padding-bottom: 10px;
 }
 
 .features-text {
@@ -188,27 +235,26 @@ a.current {
   color: var(--secondary-text-color);
 }
 
-.features-list{
-    display: flex;
+.features-list {
+  display: flex;
 }
-.features-list li:not(:last-child){
-    margin-right: 30px;
+.features-list li:not(:last-child) {
+  margin-right: 30px;
 }
 
-.features-list-item{
-    display: block;
+.features-list-item {
+  display: block;
 }
 
 /*------------------------TASK-----------------------*/
 
-.task{
-    margin: 0 auto;
+.task {
+  margin: 0 auto;
   width: 1200px;
-  padding: 0 15px;
 }
 
 .task-title {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -218,42 +264,46 @@ a.current {
   color: var(--primary-text-color);
 }
 
-.task-list{
-    display: flex;
+.task-list {
+  display: flex;
 }
 
-.task-list-item{
-    display: block;
+.task-list-item {
+  display: block;
 }
 
-.task-list-item:not(:last-child){
-    margin-right: 30px;
+.task-list-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 /*------------------------TEAM-----------------------*/
 
-.team{
-    background-color: #F5F4FA;
-    margin: 0 auto;
+.team {
+  background-color: #f5f4fa;
+  margin: 0 auto;
   width: 1200px;
-  padding: 0 15px;
 }
 
-.team-list{
-    display: flex;
-    margin: 0 auto;
+.team-list {
+  display: flex;
+  margin: 0 auto;
 }
 
-.team-list-item{
-    display: block;
+.team-list-item {
+  display: block;
+  background-color: var(--primary-font-color);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  
+  box-shadow: 0 1px 2px #757575;
 }
 
-.team-list-item:not(:last-child){
-    margin-right: 30px;
+.team-list-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .team-title {
-margin-bottom: 50px;
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -271,6 +321,8 @@ margin-bottom: 50px;
   letter-spacing: 0.03em;
 
   color: var(--primary-text-color);
+  padding: 30px 0 10px 0;
+  text-align: center;
 }
 
 .team-text {
@@ -280,24 +332,37 @@ margin-bottom: 50px;
   letter-spacing: 0.03em;
 
   color: var(--secondary-text-color);
+  padding-bottom: 30px;
+  text-align: center;
 }
 
 /*------------------------FOOTER-----------------------*/
 
 .footer {
-  background-color: var(--footer-font-color);
   margin: 0 auto;
   width: 1200px;
-  padding: 0 15px;
+}
+
+.footer-bg {
+  background-color: var(--footer-font-color);
+  margin: 0 auto;
+  padding: 60px 15px;
 }
 
 .footer-logo {
+  display: block;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
   color: var(--primary-font-color);
+}
+
+.footer-list {
+  margin: 0 auto;
+  width: 1200px;
+  padding-top: 20px;
 }
 
 .address {
@@ -320,7 +385,7 @@ margin-bottom: 50px;
 }
 
 /*------------------------PORTFOLIO.HTML-----------------------*/
-/*------------------------FOOTER-----------------------*/
+/*------------------------FILTER-----------------------*/
 
 .main-hidden-title {
   position: absolute;
@@ -331,6 +396,22 @@ margin-bottom: 50px;
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
+}
+
+.main-filter {
+  margin: 0 auto;
+  width: 1200px;
+  display: block;
+}
+
+.main-list-filter {
+  display: flex;
+  padding-bottom: 50px;
+  justify-content: center;
+}
+
+.main-list-item {
+  margin-right: 8px;
 }
 
 .main-button {
@@ -345,6 +426,7 @@ margin-bottom: 50px;
   background-color: var(--filter-button-color);
   border-radius: 4px;
   border: none;
+  padding: 6px 22px;
 }
 
 .main-button:focus,
@@ -353,7 +435,22 @@ margin-bottom: 50px;
   background-color: var(--accent-color);
 }
 
-.item-title {
+.main-filter-items{
+  margin: 0 auto;
+  width: 1200px;
+}
+
+.main-list{
+  flex-wrap: wrap;
+  display: flex;
+}
+
+.main-link-item{
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.main-list .item-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -361,6 +458,7 @@ margin-bottom: 50px;
   letter-spacing: 0.06em;
 
   color: var(--primary-text-color);
+  padding: 20px 0 4px 24px;
 }
 
 .item-text {
@@ -370,4 +468,5 @@ margin-bottom: 50px;
   letter-spacing: 0.03em;
 
   color: var(--secondary-text-color);
+  padding: 0 0 4px 24px;
 }
