--- a/css/styles.css
+++ b/css/styles.css
@@ -103,10 +103,7 @@ img {
 
 .nav-list {
   display: flex;
-}
-
-.nav-list:last-child{
-  margin-right: 331px;
+  align-items: center;
 }
 
 .nav-list a {
@@ -142,6 +139,7 @@ a.current {
   display: flex;
   justify-content: left;
   align-items: center;
+  margin-left:auto;
 }
 
 .header-contacts a {
