--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ a.current {
   text-transform: uppercase;
 
   color: var(--primary-text-color);
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .features-text {
@@ -300,6 +300,11 @@ a.current {
   color: #212121;
 }
 
+.team-description{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 .team-name {
   font-weight: 500;
   font-size: 16px;
@@ -308,8 +313,8 @@ a.current {
   letter-spacing: 0.03em;
 
   color: var(--primary-text-color);
-  padding: 30px 0 10px 0;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .team-text {
@@ -319,20 +324,16 @@ a.current {
   letter-spacing: 0.03em;
 
   color: var(--secondary-text-color);
-  padding-bottom: 30px;
   text-align: center;
 }
 
 /*------------------------FOOTER-----------------------*/
 
-/* .footer {
-  margin: 0 auto;
-  width: 1200px; */
-
 .footer-bg {
   background-color: var(--footer-font-color);
   margin: 0 auto;
-  padding: 60px 15px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-logo {
@@ -439,6 +440,7 @@ a.current {
 
 .list-item-desc{
   padding: 20px 24px;
+  border:1px solid #EEEEEE
 }
 
 .main-list .item-title {
