--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ img {
 .nav-list {
   display: flex;
   align-items: center;
+  margin-right: -50px;
 }
 
 .nav-list a {
@@ -117,7 +118,7 @@ img {
 }
 
 
-.nav-list-item:not(:last-child) {
+.nav-list-item{
   margin-right: 50px;
 }
 
@@ -140,6 +141,7 @@ a.current {
   justify-content: left;
   align-items: center;
   margin-left:auto;
+  margin-right: -50px;
 }
 
 .header-contacts a {
@@ -153,7 +155,7 @@ a.current {
   color: var(--secondary-text-color);
 }
 
-.contacts-list-item:not(:last-child) {
+.contacts-list-item{
   margin-right: 50px;
 }
 
@@ -230,14 +232,13 @@ a.current {
 
 .features-list {
   display: flex;
-}
-.features-list li:not(:last-child) {
-  margin-right: 30px;
+  margin-right: -30px;
 }
 
 .features-list-item {
   display: block;
   width: 270px;
+  margin-right: 30px;
 }
 
 /*------------------------TASK-----------------------*/
@@ -255,13 +256,11 @@ a.current {
 
 .task-list {
   display: flex;
+  margin-right: -30px;
 }
 
 .task-list-item {
   display: block;
-}
-
-.task-list-item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -274,6 +273,7 @@ a.current {
 .team-list {
   display: flex;
   margin: 0 auto;
+  margin-right: -30px;
 }
 
 .team-list-item {
@@ -283,11 +283,9 @@ a.current {
   border-bottom-right-radius: 4px;
   
   box-shadow: 0 1px 2px #757575;
-}
-
-.team-list-item:not(:last-child) {
   margin-right: 30px;
 }
+
 
 .team-title {
   margin-bottom: 50px;
@@ -427,6 +425,7 @@ a.current {
 .main-list{
   flex-wrap: wrap;
   display: flex;
+  margin-right: -30px;
 }
 
 .main-link-item{
@@ -434,9 +433,9 @@ a.current {
   margin-bottom: 30px;
 }
 
-.main-link-item:nth-child(3n){
+/* .main-link-item:nth-child(3n){
   margin-right: 0;
-}
+} */
 
 .list-item-desc{
   padding: 20px 24px;
