--- a/css/styles.css
+++ b/css/styles.css
@@ -95,11 +95,9 @@ img {
   color: var(--primary-text-color);
 }
 
-.nav-menu{
+.nav-menu {
   display: flex;
 }
-
-
 
 .nav-list {
   display: flex;
@@ -117,8 +115,7 @@ img {
   margin-left: auto;
 }
 
-
-.nav-list-item{
+.nav-list-item {
   margin-right: 50px;
 }
 
@@ -140,7 +137,7 @@ a.current {
   display: flex;
   justify-content: left;
   align-items: center;
-  margin-left:auto;
+  margin-left: auto;
   margin-right: -50px;
 }
 
@@ -155,20 +152,43 @@ a.current {
   color: var(--secondary-text-color);
 }
 
-.contacts-list-item{
+.contacts-list-item {
   margin-right: 50px;
 }
 
 /*------------------------BANER-----------------------*/
 .banner-bg {
-  background-color: #2f303a;
-  height: 600px;
+  background-color: var(--footer-font-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 200px 0;
+  margin-left: auto;
+  margin-right: auto;
+  background-repeat: no-repeat;
+  max-width: 1600px;
+  height: 600px;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/banner.jpg);
 }
+
+/* .thumb{
+  margin-left: auto;
+  margin-right: auto;
+  background-repeat: no-repeat;
+  max-width: 1600px;
+  height: 600px;
+  background-image: linear-gradient(
+    to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+  url(../img/banner.jpg);
+} */
 
 .banner-title {
   font-weight: 900;
@@ -186,7 +206,7 @@ a.current {
   margin-bottom: 30px;
 }
 
-.banner-button { 
+.banner-button {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 16px;
@@ -206,7 +226,7 @@ a.current {
 
 /*------------------------FEATURES-----------------------*/
 
-.features{
+.features {
   padding-bottom: 0;
 }
 
@@ -239,6 +259,34 @@ a.current {
   display: block;
   width: 270px;
   margin-right: 30px;
+}
+
+.features-list-item::before{
+  margin-bottom: 30px;
+  border-radius: 4px;
+  display: block;
+  content: '';
+  height: 120px;
+  background-color: #F5F4FA;
+  background-position: center;
+  background-repeat: no-repeat;
+  
+}
+
+.satellite-icon::before{
+  background-image: url(../img/antenna\ 1.svg);
+}
+
+.timer-icon::before{
+  background-image: url(../img/clock\ 1.svg);
+}
+
+.computer-icon::before{
+  background-image: url(../img/diagram\ 1.svg);
+}
+
+.astronaut-icon::before{
+  background-image: url(../img/astronaut\ 1.svg);
 }
 
 /*------------------------TASK-----------------------*/
@@ -279,13 +327,12 @@ a.current {
 .team-list-item {
   display: block;
   background-color: var(--primary-font-color);
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  
-  box-shadow: 0 1px 2px #757575;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
   margin-right: 30px;
 }
-
 
 .team-title {
   margin-bottom: 50px;
@@ -298,7 +345,7 @@ a.current {
   color: #212121;
 }
 
-.team-description{
+.team-description {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -350,7 +397,7 @@ a.current {
   padding-top: 20px;
 }
 
-.footer-list-item:not(:last-child){
+.footer-list-item:not(:last-child) {
   margin-bottom: 9px;
 }
 
@@ -422,14 +469,14 @@ a.current {
   background-color: var(--accent-color);
 }
 
-.main-list{
+.main-list {
   flex-wrap: wrap;
   display: flex;
   margin-right: -30px;
   margin-bottom: -30px;
 }
 
-.main-link-item{
+.main-link-item {
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -438,9 +485,9 @@ a.current {
   margin-right: 0;
 } */
 
-.list-item-desc{
+.list-item-desc {
   padding: 20px 24px;
-  border:1px solid #EEEEEE
+  border: 1px solid #eeeeee;
 }
 
 .main-list .item-title {
